--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walk it Out</title>
+    <title>Go Dave Go!</title>
     <style>
         body {
             text-align: center;
@@ -41,8 +41,8 @@
     </style>
 </head>
 <body>
-    <h1>Walk it Out</h1>
-    <p>You got this, Dave!</p>
+    <h1>Go Dave Go!</h1>
+    <p>A beautiful day to score some runs.</p>
     <canvas id="gameCanvas"></canvas>
     <div class="game-over" id="gameOverScreen">
         <h2>David! 🙄</h2>
@@ -64,7 +64,7 @@
 
         let player = { x: canvas.width / 2 - PLAYER_WIDTH / 2, y: canvas.height - PLAYER_HEIGHT * 2, width: PLAYER_WIDTH, height: PLAYER_HEIGHT };
         let ball = { x: Math.random() * (canvas.width - BALL_RADIUS * 2) + BALL_RADIUS, y: 50, radius: BALL_RADIUS, speed: INITIAL_BALL_SPEED };
-        let walks = 0, strikes = 0;
+        let hitsByPitch = 0, strikes = 0;
         let isDragging = false;
         let gamePaused = false;
 
@@ -99,7 +99,7 @@
                 ball.x < player.x + player.width &&
                 ball.y + ball.radius >= player.y
             ) {
-                walks++;
+                hitsByPitch++;
                 strikes = 0;
                 ball.speed += 0.5;
                 resetBall();
@@ -119,7 +119,7 @@
             moveBall();
             ctx.fillStyle = "white";
             ctx.font = "24px Arial";
-            ctx.fillText(`Walks: ${walks}`, 10, 90);
+            ctx.fillText(`Hits by Pitch: ${hitsByPitch}`, 10, 90);
             ctx.fillText(`Strikes: ${strikes}/3`, 10, 120);
             if (strikes >= 3) {
                 gamePaused = true;
@@ -130,7 +130,7 @@
         }
 
         function restartGame() {
-            walks = 0;
+            hitsByPitch = 0;
             strikes = 0;
             ball.speed = INITIAL_BALL_SPEED;
             player.x = canvas.width / 2 - PLAYER_WIDTH / 2;
@@ -139,6 +139,8 @@
             document.getElementById("gameOverScreen").style.display = "none";
             gameLoop();
         }
+
+        // Desktop support
 
         canvas.addEventListener("mousedown", (e) => {
             if (
@@ -158,6 +160,29 @@
         });
 
         canvas.addEventListener("mouseup", () => {
+            isDragging = false;
+        });
+
+        // Mobile support
+
+        canvas.addEventListener("touchstart", (e) => {
+            let touchX = e.touches[0].clientX;
+            if (
+                touchX >= player.x &&
+                touchX <= player.x + player.width
+            ) {
+                isDragging = true;
+            }
+        });
+
+        canvas.addEventListener("touchmove", (e) => {
+            if (isDragging) {
+                let touchX = e.touches[0].clientX;
+                paddle.x = touchX - paddle.width / 2;
+            }
+        });
+
+        canvas.addEventListener("touchend", () => {
             isDragging = false;
         });
 
