--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go Dave Go!</title>
+    <title>Walk it Off!</title>
     <style>
         body {
             text-align: center;
@@ -12,7 +12,6 @@
             margin: 0;
         }
         canvas {
-            background-color: #3e8e41;
             display: block;
             margin: auto;
         }
@@ -41,8 +40,6 @@
     </style>
 </head>
 <body>
-    <h1>Go Dave Go!</h1>
-    <p>A beautiful day to score some runs.</p>
     <canvas id="gameCanvas"></canvas>
     <div class="game-over" id="gameOverScreen">
         <h2>David! 🙄</h2>
@@ -56,14 +53,14 @@
 
         // Constants
         const PLAYER_IMAGE_SRC = "dave-baseball-player.png";
-        const PLAYER_HEIGHT_BUFFER = 50;
         const BALL_IMAGE_SRC = "baseball.png";
         const PLAYER_WIDTH = 150;
         const PLAYER_HEIGHT = 150;
         const BALL_RADIUS = 30;
         const INITIAL_BALL_SPEED = 2;
+        const TITLE_AREA_HEIGHT = 120;
 
-        let player = { x: canvas.width / 2 - PLAYER_WIDTH / 2, y: canvas.height - PLAYER_HEIGHT + PLAYER_HEIGHT_BUFFER, width: PLAYER_WIDTH, height: PLAYER_HEIGHT };
+        let player = { x: canvas.width / 2 - PLAYER_WIDTH / 2, y: canvas.height - PLAYER_HEIGHT + 50, width: PLAYER_WIDTH, height: PLAYER_HEIGHT };
         let ball = { x: Math.random() * (canvas.width - BALL_RADIUS * 2) + BALL_RADIUS, y: 50, radius: BALL_RADIUS, speed: INITIAL_BALL_SPEED };
         let hitsByPitch = 0, strikes = 0;
         let isDragging = false;
@@ -74,6 +71,25 @@
         
         const ballImage = new Image();
         ballImage.src = BALL_IMAGE_SRC;
+
+        function drawBackground() {
+            // Draw blue background for title and subtitle area
+            ctx.fillStyle = "#87CEEB";
+            ctx.fillRect(0, 0, canvas.width,  TITLE_AREA_HEIGHT);
+
+            // Draw green background for the rest of the canvas
+            ctx.fillStyle = "#3E8E41";
+            ctx.fillRect(0, TITLE_AREA_HEIGHT, canvas.width, canvas.height -  TITLE_AREA_HEIGHT);
+        }
+
+        function drawTitle() {
+            ctx.fillStyle = "white";
+            ctx.font = "48px Arial";
+            ctx.textAlign = "center";
+            ctx.fillText("Walk it Off!", canvas.width / 2, 60);
+            ctx.font = "24px Arial";
+            ctx.fillText("A beautiful day to score some runs.", canvas.width / 2, 100);
+        }
 
         function drawSun() {
             ctx.font = "40px Arial";
@@ -114,14 +130,16 @@
 
         function gameLoop() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawBackground();
+            drawTitle();
             drawSun();
             drawPlayer();
             drawBall();
             moveBall();
             ctx.fillStyle = "white";
             ctx.font = "24px Arial";
-            ctx.fillText(`Hits by Pitch: ${hitsByPitch}`, 10, 90);
-            ctx.fillText(`Strikes: ${strikes}/3`, 10, 120);
+            ctx.fillText(`Hits by Pitch: ${hitsByPitch}`, 90, TITLE_AREA_HEIGHT + 30);
+            ctx.fillText(`Strikes: ${strikes}/3`, 70,  TITLE_AREA_HEIGHT + 60);
             if (strikes >= 3) {
                 gamePaused = true;
                 document.getElementById("gameOverScreen").style.display = "block";
