--- a/index.html
+++ b/index.html
@@ -100,8 +100,15 @@
             ctx.drawImage(playerImage, player.x, player.y, player.width, player.height);
         }
 
+        function getBallImage() {
+            let ballImage = new Image();
+            if (hitsByPitch < 10) ballImage.src = "baseball.png";
+            else ballImage.src = "dagwood.png";
+            return ballImage;
+        }
+
         function drawBall() {
-            ctx.drawImage(ballImage, ball.x - BALL_RADIUS, ball.y - BALL_RADIUS, BALL_RADIUS * 2, BALL_RADIUS * 2);
+            ctx.drawImage(getBallImage(), ball.x - BALL_RADIUS, ball.y - BALL_RADIUS, BALL_RADIUS * 2, BALL_RADIUS * 2);
         }
 
         function moveBall() {
